--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.4.2",
+    "frappe-gantt": "^0.6.1",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.1.0",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
+    "@types/frappe-gantt": "^0.6.4",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
