--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "frappe-gantt": "^0.6.1",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "sass": "^1.75.0"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/frappe-gantt": "^0.6.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
